# Veltrix

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  RUNNING.md  SETUP.md  TROUBLESHOOTING.md  workflow_walkthrough.md
Resources/: links.txt  temp.md
docs/: ONBOARDING.md  SERVICE_DEPENDENCIES.md  TECH_DEBT.md  software_design_document.md
test/: Dockerfile  README.md  main.cpp
test_submission/: Dockerfile  main.cpp
veltrix/: .env  .gitignore  STARTUP_AND_MONITORING.md  architecture_part1.md  architecture_part2.md  architecture_part3.md  architecture_part4.md  docker-compose.yml
veltrix/artifact-checker/: CMakeLists.txt  Dockerfile  README.md  go.mod  go.sum
veltrix/artifact-checker-go/: Dockerfile  README.md  go.mod
veltrix/artifact-checker-go/cmd/artifact-checker/: main.go
veltrix/artifact-checker-go/internal/aggregator/: aggregator.go  aggregator_test.go
veltrix/artifact-checker-go/internal/consumer/: consumer.go
veltrix/artifact-checker-go/internal/models/: models.go
veltrix/artifact-checker-go/internal/shadowengine/: engine.go  engine_test.go
veltrix/artifact-checker-go/internal/storage/: publisher.go
veltrix/artifact-checker-go/internal/watermark/: event_heap.go  processor.go  processor_test.go  router.go
veltrix/artifact-checker/cmd/artifact-checker/: main.go
veltrix/artifact-checker/include/: artifact_checker.hpp  correctness_engine.hpp  hdr_histogram.hpp  shadow_orderbook.hpp  timescale_writer.hpp
veltrix/artifact-checker/internal/aggregator/: aggregator.go  aggregator_test.go
veltrix/artifact-checker/internal/consumer/: consumer.go
veltrix/artifact-checker/internal/models/: models.go
veltrix/artifact-checker/internal/replayengine/: engine.go  engine_test.go
veltrix/artifact-checker/internal/shadowengine/: engine.go  engine_test.go
veltrix/artifact-checker/internal/storage/: publisher.go
veltrix/artifact-checker/internal/watermark/: event_heap.go  processor.go  processor_test.go  router.go
veltrix/artifact-checker/src/: artifact_checker.cpp  correctness_engine.cpp  hdr_histogram.cpp  main.cpp  shadow_orderbook.cpp  timescale_writer.cpp
veltrix/bot-fleet/: CMakeLists.txt  Dockerfile  README.md
veltrix/bot-fleet/include/: audit_log.hpp  bot_payload.hpp  fleet_commander.hpp  grpc_telemetry.hpp  rest_bot.hpp  telemetry.hpp  thread_worker.hpp
veltrix/bot-fleet/src/: fleet_commander.cpp  grpc_telemetry.cpp  main.cpp  rest_bot.cpp  telemetry.cpp  thread_worker.cpp
veltrix/db/: init.sql  leaderboard_metrics.sql
veltrix/docs/: architecture.md  matching-spec.md
veltrix/leaderboard-service/: Dockerfile  README.md  db.go  go.mod  go.sum  hub.go  main.go  state.go  subscriber.go
veltrix/leaderboard-service/templates/: base.html  row.html  table.html
veltrix/proto/: telemetry.proto
veltrix/sandbox-manager/: Dockerfile  README.md  go.mod  go.sum  main.py  requirements.txt
veltrix/sandbox-manager/cmd/: main.go
veltrix/sandbox-manager/internal/archive/: archive.go
veltrix/sandbox-manager/internal/config/: config.go
veltrix/sandbox-manager/internal/db/: db.go
veltrix/sandbox-manager/internal/docker/: docker.go
veltrix/sandbox-manager/internal/fleet/: pool.go
veltrix/sandbox-manager/internal/storage/: storage.go
veltrix/sandbox-manager/internal/worker/: worker.go
veltrix/submission-service/: Dockerfile  README.md  go.mod  go.sum  main.py  requirements.txt
veltrix/submission-service/cmd/: main.go
veltrix/submission-service/internal/config/: config.go
veltrix/submission-service/internal/db/: db.go
veltrix/submission-service/internal/handler/: handler.go
veltrix/submission-service/internal/queue/: queue.go
veltrix/submission-service/internal/storage/: storage.go
veltrix/telemetry-ingester/: Dockerfile  README.md  go.mod  go.sum  main.go  main.py  requirements.txt
veltrix/telemetry-ingester/internal/grpcserver/: server.go
veltrix/telemetry-ingester/internal/pb/: service.go  types.go
veltrix/telemetry-ingester/internal/producer/: producer.go
veltrix/test/: CMakeLists.txt  README.md  main.cpp
